--- a/back/.env_example
+++ b/back/.env_example
@@ -1,6 +1,6 @@
 PORT=5000
 DEV=true
-DB_URL=mongodb://localhost:27017/casic
+DB_URL=mongodb://127.0.0.1:27017:27017/serials
 
 RFR_SECRET=rfrsecret
 JWT_SECRET=myjwtsecret
