--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "jsonwebtoken": "^9.0.2",
     "mobx": "^6.13.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
+    "react-toastify": "^11.0.5",
     "sass": "^1.87.0"
   },
   "devDependencies": {
